# Splash

./: '  .gitignore  API.h  CMakeLists.txt  Compute.cxx  Compute.hxx  DataTransferBench.cxx  ElementalTests.cxx  Elementals.cl  Elementals.cxx  Elementals.hxx  Engine.hxx  LinearAlgebraBasicTests.c  LinearAlgebraBasicTests.cxx  MatrixVector.cl  Memory.cxx  Memory.hxx  README.md  Redux.cl  Redux.cxx  Redux.hxx  ReduxTest.cxx  Runtime.cxx  Runtime.hxx  SparseMatrix.c  SparseMatrix.cxx  SparseMatrix.h  SparseMatrix.hxx  SparseMatrixVectorMulTest.cxx  Threads.hxx  Utility.c  Utility.cxx  Utility.h  Utility.hxx  Vector.c  Vector.cl  Vector.h  VectorNormTests.cxx
